# NerdBot

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: run.yml
