[tool.poetry]
name = "nerdbot"
version = "0.1.0"
description = ""
authors = ["Exenifix"]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.5.2"
exencolorlogs = "^1.0.2"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
